#345 Initial code changes for new 2.0 version